--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,262 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
-  "projects": {}
+  "projects": {
+    "notification-elements": {
+      "projectType": "application",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
+      "root": "projects/notification-elements",
+      "sourceRoot": "projects/notification-elements/src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "ngx-build-plus:browser",
+          "options": {
+            "outputPath": "dist/notification-elements",
+            "index": "projects/notification-elements/src/index.html",
+            "main": "projects/notification-elements/src/main.ts",
+            "polyfills": "projects/notification-elements/src/polyfills.ts",
+            "tsConfig": "projects/notification-elements/tsconfig.app.json",
+            "aot": true,
+            "assets": [
+              "projects/notification-elements/src/favicon.ico",
+              "projects/notification-elements/src/assets"
+            ],
+            "styles": [
+              "projects/notification-elements/src/styles.scss"
+            ],
+            "scripts": [
+              {
+                "bundleName": "polyfill-webcomp-es5",
+                "input": "node_modules/@webcomponents/webcomponentsjs/custom-elements-es5-adapter.js"
+              },
+              {
+                "bundleName": "polyfill-webcomp",
+                "input": "node_modules/@webcomponents/webcomponentsjs/bundles/webcomponents-sd-ce-pf.js"
+              }
+            ]
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "projects/notification-elements/src/environments/environment.ts",
+                  "with": "projects/notification-elements/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "ngx-build-plus:dev-server",
+          "options": {
+            "browserTarget": "notification-elements:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "notification-elements:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "notification-elements:build"
+          }
+        },
+        "test": {
+          "builder": "ngx-build-plus:karma",
+          "options": {
+            "main": "projects/notification-elements/src/test.ts",
+            "polyfills": "projects/notification-elements/src/polyfills.ts",
+            "tsConfig": "projects/notification-elements/tsconfig.spec.json",
+            "karmaConfig": "projects/notification-elements/karma.conf.js",
+            "assets": [
+              "projects/notification-elements/src/favicon.ico",
+              "projects/notification-elements/src/assets"
+            ],
+            "styles": [
+              "projects/notification-elements/src/styles.scss"
+            ],
+            "scripts": []
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/notification-elements/tsconfig.app.json",
+              "projects/notification-elements/tsconfig.spec.json",
+              "projects/notification-elements/e2e/tsconfig.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        },
+        "e2e": {
+          "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "projects/notification-elements/e2e/protractor.conf.js",
+            "devServerTarget": "notification-elements:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "notification-elements:serve:production"
+            }
+          }
+        }
+      }
+    },
+    "notifications-playground": {
+      "projectType": "application",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
+      "root": "projects/notifications-playground",
+      "sourceRoot": "projects/notifications-playground/src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/notifications-playground",
+            "index": "projects/notifications-playground/src/index.html",
+            "main": "projects/notifications-playground/src/main.ts",
+            "polyfills": "projects/notifications-playground/src/polyfills.ts",
+            "tsConfig": "projects/notifications-playground/tsconfig.app.json",
+            "aot": true,
+            "assets": [
+              "projects/notifications-playground/src/favicon.ico",
+              "projects/notifications-playground/src/assets"
+            ],
+            "styles": [
+              "projects/notifications-playground/src/styles.scss"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "projects/notifications-playground/src/environments/environment.ts",
+                  "with": "projects/notifications-playground/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "notifications-playground:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "notifications-playground:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "notifications-playground:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/notifications-playground/src/test.ts",
+            "polyfills": "projects/notifications-playground/src/polyfills.ts",
+            "tsConfig": "projects/notifications-playground/tsconfig.spec.json",
+            "karmaConfig": "projects/notifications-playground/karma.conf.js",
+            "assets": [
+              "projects/notifications-playground/src/favicon.ico",
+              "projects/notifications-playground/src/assets"
+            ],
+            "styles": [
+              "projects/notifications-playground/src/styles.scss"
+            ],
+            "scripts": []
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/notifications-playground/tsconfig.app.json",
+              "projects/notifications-playground/tsconfig.spec.json",
+              "projects/notifications-playground/e2e/tsconfig.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        },
+        "e2e": {
+          "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "projects/notifications-playground/e2e/protractor.conf.js",
+            "devServerTarget": "notifications-playground:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "notifications-playground:serve:production"
+            }
+          }
+        }
+      }
+    }
+  },
+  "cli": {
+    "analytics": "5e6652fc-a596-4433-9d6e-4c0e098c6bcd"
+  },
+  "defaultProject": "notifications-playground"
 }
