--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:libs": "ng build notification-elements --keep-polyfills --output-hashing none --prod --single-bundle",
+    "prep:static": "cpx dist/notification-elements/main-es5.js elements/ && cpx projects/notifications-playground/static-src/* elements",
+    "serve:static": "npm run build:libs && npm run prep:static && lite-server --baseDir=elements",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -15,6 +18,7 @@
     "@angular/common": "~9.0.0-rc.6",
     "@angular/compiler": "~9.0.0-rc.6",
     "@angular/core": "~9.0.0-rc.6",
+    "@angular/elements": "^8.2.14",
     "@angular/forms": "~9.0.0-rc.6",
     "@angular/platform-browser": "~9.0.0-rc.6",
     "@angular/platform-browser-dynamic": "~9.0.0-rc.6",
@@ -23,17 +27,19 @@
     "ngx-build-plus": "^9.0.2",
     "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "document-register-element": "^1.7.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.0-rc.6",
     "@angular/cli": "~9.0.0-rc.6",
     "@angular/compiler-cli": "~9.0.0-rc.6",
     "@angular/language-service": "~9.0.0-rc.6",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
+    "cpx": "^1.5.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.3.0",
@@ -41,6 +47,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "lite-server": "^2.5.4",
     "protractor": "~5.4.2",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
