--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:libs": "ng build notification-elements --keep-polyfills --output-hashing none --prod --single-bundle",
-    "prep:static": "cpx dist/notification-elements/main-es5.js elements/ && cpx projects/notifications-playground/static-src/* elements",
-    "serve:static": "npm run build:libs && npm run prep:static && lite-server --baseDir=elements",
+    "build:libs": "ng build notification-elements --output-hashing none --prod --single-bundle true",
+    "copy:static:elements": "cpx projects/notifications-playground/static-src/* elements -C && cpx dist/notification-elements/main.js elements/",
+    "serve:static": "npm run build:libs && npm run copy:static:elements && npm run copy:polyfills && lite-server --baseDir=elements",
+    "copy:polyfills":"cpx node_modules/@webcomponents/webcomponentsjs/{webcomponents-bundle,custom-elements-es5-adapter}.js elements/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -24,11 +25,14 @@
     "@angular/platform-browser-dynamic": "~9.0.0-rc.6",
     "@angular/router": "~9.0.0-rc.6",
     "@webcomponents/webcomponentsjs": "^2.4.0",
+    "classlist.js": "^1.1.20150312",
+    "core-js": "^3.6.0",
+    "document-register-element": "^1.7.2",
     "ngx-build-plus": "^9.0.2",
     "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "document-register-element": "^1.7.2"
+    "web-animations-js": "^2.3.2",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.0-rc.6",
