--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
               "projects/notification-elements/src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "projects/notification-elements/src/styles.scss"
             ],
             "scripts": [
@@ -96,6 +97,7 @@
               "projects/notification-elements/src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "projects/notification-elements/src/styles.scss"
             ],
             "scripts": []
