--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:libs": "ng build notification-elements --output-hashing none --prod --single-bundle true",
     "copy:static:elements": "cpx projects/notifications-playground/static-src/* elements -C && cpx dist/notification-elements/main.js elements/",
     "serve:static": "npm run build:libs && npm run copy:static:elements && npm run copy:polyfills && lite-server --baseDir=elements",
-    "copy:polyfills":"cpx node_modules/@webcomponents/webcomponentsjs/{webcomponents-bundle,custom-elements-es5-adapter}.js elements/",
+    "copy:polyfills": "cpx node_modules/@webcomponents/webcomponentsjs/{webcomponents-bundle,custom-elements-es5-adapter}.js elements/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -16,11 +16,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.0-rc.6",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~9.0.0-rc.6",
     "@angular/compiler": "~9.0.0-rc.6",
     "@angular/core": "~9.0.0-rc.6",
     "@angular/elements": "^8.2.14",
     "@angular/forms": "~9.0.0-rc.6",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~9.0.0-rc.6",
     "@angular/platform-browser-dynamic": "~9.0.0-rc.6",
     "@angular/router": "~9.0.0-rc.6",
@@ -28,6 +30,7 @@
     "classlist.js": "^1.1.20150312",
     "core-js": "^3.6.0",
     "document-register-element": "^1.7.2",
+    "hammerjs": "^2.0.8",
     "ngx-build-plus": "^9.0.2",
     "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
